--- a/iOS/iOS.entitlements
+++ b/iOS/iOS.entitlements
@@ -5,18 +5,14 @@
 	<key>aps-environment</key>
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
-	<array>
-		<string>$(ICLOUD_CONTAINER_ID)</string>
-	</array>
+	<array/>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
-		<string>CloudKit</string>
 		<string>CloudDocuments</string>
+		<string>CloudKit</string>
 	</array>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
-	<array>
-		<string>$(ICLOUD_CONTAINER_ID)</string>
-	</array>
+	<array/>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 </dict>
