feat: Mettre à jour la configuration Supabase et ajouter des règles pour ignorer les fichiers d'environnement locaux

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,7 +3,7 @@
 
 # URL de votre projet Supabase
 # Exemple: https://xyzcompany.supabase.co
-SUPABASE_URL=your_supabase_url_here
+SUPABASE_URL=test
 
 # Clé publique (anon key) de votre projet Supabase
 # Trouvez-la dans: Project Settings > API > Project API keys > anon public
