feat: Ajouter la configuration de Supabase et mettre à jour .gitignore pour inclure les informations sensibles

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ buildServer.json
 .env.local
 .env.local.example
 .env.*.local
+
+# Supabase credentials (DO NOT COMMIT)
+Shared/Managers/SupabaseConfig.swift
