feat: Renommer le projet Aidoku en TomoScan et mettre à jour les ressources associées

--- a/Shared/Aidoku.xcconfig
+++ b/Shared/Aidoku.xcconfig
@@ -1,13 +1,13 @@
 //
-//  Aidoku.xcconfig
-//  Aidoku
+//  TomoScan.xcconfig
+//  TomoScan
 //
 //  Created by Nikolai Schumacher on 17.05.25.
 //
 
 // base identifiers
-APP_ID_PREFIX               = app.aidoku
-APP_ID_SUFFIX               = Aidoku
+APP_ID_PREFIX               = fr.mciut.fr
+APP_ID_SUFFIX               = tomoscan
 
 PRODUCT_BUNDLE_IDENTIFIER   = $(APP_ID_PREFIX).$(APP_ID_SUFFIX)
 
